# RType

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CREDITS  Doxyfile  Makefile  README.md  cpack_source.cmake  cpacke.cmake  glfw3Config.cmake  index.dox
.github/workflows/: epitech-mirror.yml  release-draft-major.yml  release-draft-minor.yml  units-tests.yml
assets/: continental.gltf  enemy.gltf  frozen.gltf  gas.gltf  grenade.gltf  player.gltf  smac.gltf  star.gltf
docs/: NetworkRFC.md
docs/doxygen/: Doxyfile
docs/windows/: windows-compil.dox
src/: CMakeLists.txt  ShapeShipSync.hpp  ShipActions.hpp  SpaceShipSync.hpp  SpaceshipSync.cpp  main.cpp  main.hpp
test/: CMakeLists.txt  unittest_basic.cpp
